--- a/antora/components/docs/modules/ROOT/partials/component-nav.adoc
+++ b/antora/components/docs/modules/ROOT/partials/component-nav.adoc
@@ -4,7 +4,7 @@ include::docs:ROOT:partial$module-nav/demos-and-tutorials.adoc[]
 include::docs:ROOT:partial$module-nav/resources.adoc[]
 include::docs:ROOT:partial$module-nav/guides.adoc[]
 include::docs:ROOT:partial$module-nav/components.adoc[]
-include::docs:ROOT:partial$module-nav/libraries.adoc[]
+include::docs:ROOT:partial$module-nav/catalogs.adoc[]
 include::docs:support:partial$module-nav.adoc[]
 include::docs:ROOT:partial$module-nav/framework.adoc[]
 include::docs:ROOT:partial$module-nav/further-resources.adoc[]
