--- a/antora/components/refguide-index/modules/applib/pages/index/services/metamodel/DomainModel.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/metamodel/DomainModel.adoc
@@ -8,6 +8,7 @@
 ----
 interface DomainModel {
   List<DomainMember> getDomainMembers()
+  void forEachLogicalType(BiConsumer<? super String, ? super List<DomainMember>> consumer)
 }
 ----
 
