--- a/antora/components/refguide-index/modules/viewer/pages/index/restfulobjects/applib/JsonRepresentation.adoc
+++ b/antora/components/refguide-index/modules/viewer/pages/index/restfulobjects/applib/JsonRepresentation.adoc
@@ -13,6 +13,7 @@ class JsonRepresentation {
   public static final DateTimeFormatter yyyyMMddTHHmmssZ;
   public static final DateTimeFormatter _HHmmss;
   JsonRepresentation(JsonNode jsonNode)
+  JsonRepresentation jsonAsMap(String keyValuePairsAsJson)
   JsonRepresentation newMap(String... keyValuePairs)
   JsonRepresentation newArray()
   JsonRepresentation newArray(int initialSize)
@@ -110,29 +111,31 @@ class JsonRepresentation {
   boolean mapHas(String key)
   JsonRepresentation mapPut(String key, List<Object> value)
   JsonRepresentation mapPut(String key, Object value)
-  JsonRepresentation mapPut(String key, JsonRepresentation value)
-  JsonRepresentation mapPut(String key, String value)
-  JsonRepresentation mapPut(String key, JsonNode value)
-  JsonRepresentation mapPut(String key, byte value)
-  JsonRepresentation mapPut(String key, Byte value)
-  JsonRepresentation mapPut(String key, short value)
-  JsonRepresentation mapPut(String key, Short value)
-  JsonRepresentation mapPut(String key, int value)
-  JsonRepresentation mapPut(String key, Integer value)
-  JsonRepresentation mapPut(String key, long value)
-  JsonRepresentation mapPut(String key, Long value)
-  JsonRepresentation mapPut(String key, float value)
-  JsonRepresentation mapPut(String key, Float value)
-  JsonRepresentation mapPut(String key, double value)
-  JsonRepresentation mapPut(String key, Double value)
-  JsonRepresentation mapPut(String key, boolean value)
-  JsonRepresentation mapPut(String key, Boolean value)
-  JsonRepresentation mapPut(String key, char value)
-  JsonRepresentation mapPut(String key, Character value)
-  JsonRepresentation mapPut(String key, BigInteger value)
-  JsonRepresentation mapPut(Iterable<Entry<String, JsonRepresentation>> entries)
-  JsonRepresentation mapPut(Entry<String, JsonRepresentation> entry)
-  JsonRepresentation mapPut(String key, BigDecimal value)
+  JsonRepresentation mapPutJsonRepresentation(String key, JsonRepresentation value)
+  JsonRepresentation mapPutString(String key, String value)
+  JsonRepresentation mapPutJsonNode(String key, JsonNode value)
+  JsonRepresentation mapPutByte(String key, byte value)
+  JsonRepresentation mapPutByteNullable(String key, Byte value)
+  JsonRepresentation mapPutShort(String key, short value)
+  JsonRepresentation mapPutShortNullable(String key, Short value)
+  JsonRepresentation mapPutInt(String key, int value)
+  JsonRepresentation mapPutIntNullable(String key, Integer value)
+  JsonRepresentation mapPutLong(String key, long value)
+  JsonRepresentation mapPutLongNullable(String key, Long value)
+  JsonRepresentation mapPutFloat(String key, float value)
+  JsonRepresentation mapPutFloatNullable(String key, Float value)
+  JsonRepresentation mapPutDouble(String key, double value)
+  JsonRepresentation mapPutDoubleNullable(String key, Double value)
+  JsonRepresentation mapPutBoolean(String key, boolean value)
+  JsonRepresentation mapPutBooleanNullable(String key, Boolean value)
+  JsonRepresentation mapPutChar(String key, char value)
+  JsonRepresentation mapPutCharNullable(String key, Character value)
+  JsonRepresentation mapPutBigInteger(String key, BigInteger value)
+  JsonRepresentation mapPutEntries(Iterable<Entry<String, JsonRepresentation>> entries)
+  JsonRepresentation mapPutEntry(Entry<String, JsonRepresentation> entry)
+  JsonRepresentation mapPutBigDecimal(String key, BigDecimal value)
+  JsonRepresentation putFormat(String format)
+  JsonRepresentation putExtendedFormat(String format)
   Stream<Map.Entry<String, JsonRepresentation>> streamMapEntries()
   JsonRepresentation ensureArray()     // <.>
   int hashCode()
