--- a/antora/components/docs/modules/support/partials/module-nav.adoc
+++ b/antora/components/docs/modules/support/partials/module-nav.adoc
@@ -1,7 +1,5 @@
 
 
-
-
 * Support
 
 ** Contact
@@ -17,10 +15,9 @@
 *** xref:relnotes:ROOT:about.adoc[Release Notes]
 
 
-** Nightly Builds (not ASF)
+** Nightly Builds
 
-*** link:https://github.com/apache-isis-committers/isis-nightly[CI]
-*** link:https://nexus.incode.work/[Maven repo] (current)
-*** link:https://repo.incode.cloud/[Maven repo] (v1 only)
-*** link:https://apache-isis-committers.github.io/isis-nightly[Website preview]
+*** link:https://github.com/apache/isis[Packages] (ASF hosted)
+*** link:https://github.com/apache-isis-committers/isis-nightly[Packages] (not ASF hosted)
+*** link:https://apache-isis-committers.github.io/isis-nightly[Website preview] (not ASF hosted)
 
