ISIS-2965: updates docs

--- a/antora/components/comguide/modules/ROOT/pages/post-release-successful.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/post-release-successful.adoc
@@ -490,8 +490,14 @@ link:https://blogs.apache.org/roller-ui/login.rol[Log onto] the http://blogs.apa
 Copy-n-paste the above mailing list announcement should suffice.
 
 
-== Update BASELINE for nightly builds
+== Update BASELINE for the (non-ASF) nightly builds
 
-Nightly builds (non-ASF) are generated using CI definitions in the link:https://github.com/apache-isis-committers/isis-nightly[github.com/apache-isis-committers/isis-nightly] repo, published to the link:https://nexus.incode.work/repository/nightly-builds/[nightly-builds] repo of link:https://nexus.incode.work/[nexus.incode.work]:
+Nightly builds of the framework's packages are available in two different locations:
 
-* bump the `BASELINE` variable in link:https://github.com/apache-isis-committers/isis-nightly/blob/0fdea0c4e7419b40acc9a03746e4c3cac3f262b2/.github/workflows/apache-isis-ci-nightly.yml#L15[apache-isis-ci-nightly.yml] (workflow file).
+* First, they can be found as packages of the main link:https://github.com/apache/isis[github.com/apache/isis] repo; these can be accessed using your github credentials.
++
+Bump the `BASELINE` variable in link:https://github.com/apache/isis/blob/master/.github/workflows/ci-build-artifacts-no-push-maven.yml#L20[ci-build-artifacts-no-push-maven.yml] (workflow file).
+
+* But they are also to be found as packages within the (non-ASF) link:https://github.com/apache-isis-committers/isis-nightly[github.com/apache-isis-committers/isis-nightly] repo; no credentials are required for these because the git repo is used as a package repository directly.
++
+Bump the `BASELINE` variable in link:https://github.com/apache-isis-committers/isis-nightly/blob/0fdea0c4e7419b40acc9a03746e4c3cac3f262b2/.github/workflows/apache-isis-ci-nightly.yml#L15[apache-isis-ci-nightly.yml] (workflow file).
