--- a/antora/components/docs/modules/ROOT/partials/module-nav/framework.adoc
+++ b/antora/components/docs/modules/ROOT/partials/module-nav/framework.adoc
@@ -13,12 +13,14 @@
 *** link:https://sonarcloud.io/dashboard?id=apache_isis[SonarCloud.io]
 *** link:https://fisheye.apache.org/browse/~br=master/isis-git/[ASF Fisheye]
 
-**  xref:incubator:ROOT:about.adoc[Incubator]
 
-** Other
+** Development
 
-*** xref:core:_overview:about.adoc[System Overview] (generated)
-*** xref:core:ROOT:about.adoc[Design Docs] (out of date)
+*** xref:core:ROOT:about.adoc[]
+*** xref:regressiontests:ROOT:about.adoc[]
+*** xref:incubator:ROOT:about.adoc[]
 
-** xref:more-thanks/more-thanks.adoc[Acknowledgements]
+** Thanks
+
+*** xref:more-thanks/more-thanks.adoc[Acknowledgements]
 
