--- a/core/codegen-bytebuddy/src/main/adoc/modules/codegen-bytebuddy/partials/module-nav.adoc
+++ b/core/codegen-bytebuddy/src/main/adoc/modules/codegen-bytebuddy/partials/module-nav.adoc
@@ -1,4 +1,4 @@
 
 
 
-* xref:core:codegen-bytebuddy:about.adoc[Byte Buddy Proxy Factory]
+* xref:core:codegen-bytebuddy:about.adoc[Code Gen] (Proxy Factory)
