--- a/core/codegen-bytebuddy/src/main/adoc/modules/codegen-bytebuddy/pages/about.adoc
+++ b/core/codegen-bytebuddy/src/main/adoc/modules/codegen-bytebuddy/pages/about.adoc
@@ -1,6 +1,9 @@
-= Byte Buddy Proxy Factory
+= CodeGen (Proxy Factory) using Byte Buddy
 
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-WARNING: TODO
+This module provides an implementation of the internal `_ProxyFactoryService` domain service, used to synthesise object proxies dynamically.
 
+Under the covers the link:https://bytebuddy.net/#/[Byte Buddy] library is used.
+
+The main user of this functionality is the xref:refguide:applib:index/services/wrapper/WrapperFactory.adoc[] domain service, which creates a proxy in order to intercept calls to a wrapped domain object.
