--- a/core/metamodel/src/main/adoc/modules/metamodel/partials/module-nav.adoc
+++ b/core/metamodel/src/main/adoc/modules/metamodel/partials/module-nav.adoc
@@ -1,3 +1,4 @@
 
 * xref:core:metamodel:about.adoc[MetaModel]
-** xref:core:metamodel:class-diagram.adoc[Class Diagram]
+** xref:core:metamodel:class-diagram.adoc[]
+** xref:core:metamodel:events.adoc[]
