--- a/antora/components/docs/modules/ROOT/partials/module-nav/guides.adoc
+++ b/antora/components/docs/modules/ROOT/partials/module-nav/guides.adoc
@@ -3,16 +3,14 @@
 
 * Guides
 
-** Development
-
-*** xref:setupguide:ROOT:about.adoc[Setup Guide]
-
 ** Core
 
 *** xref:userguide:ROOT:about.adoc[User Guide]
 *** xref:refguide:ROOT:about.adoc[Reference Guide]
 *** xref:testing:ROOT:about.adoc[Testing Guide]
+*** xref:security:ROOT:about.adoc[Security Guide]
 
-** Process
+** Development
+*** xref:setupguide:ROOT:about.adoc[Setup Guide]
 *** xref:conguide:ROOT:about.adoc[Contributors' Guide]
 
